--- a/flights_demo.html
+++ b/flights_demo.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Demo Flights Page</title>
 </head>
 <body>
-  <h1>Flights List</h1>
+  <h1>Flights Demo</h1>
+
+  <!-- Пример карточек рейсов (14 шт.) -->
+  <div class="flight-card">
+    <span class="from">Moscow (SVO)</span>
+    <span class="to">Paris (CDG)</span>
+    <span class="date">2025-04-01</span>
+    <span class="price">10000 RUB</span>
+  </div>
 
   <div class="flight-card">
-    <span class="from">Moscow (MOW)</span>
+    <span class="from">Moscow (SVO)</span>
     <span class="to">Paris (CDG)</span>
-    <span class="date">2025-03-15</span>
-    <span class="price">10000 RUB</span>
+    <span class="date">2025-04-02</span>
+    <span class="price">9500 RUB</span>
   </div>
 
   <div class="flight-card">
@@ -22,10 +30,80 @@
   </div>
 
   <div class="flight-card">
+    <span class="from">Saint Petersburg (LED)</span>
+    <span class="to">Sochi (AER)</span>
+    <span class="date">2025-04-11</span>
+    <span class="price">4700 RUB</span>
+  </div>
+
+  <div class="flight-card">
     <span class="from">New York (JFK)</span>
     <span class="to">Los Angeles (LAX)</span>
     <span class="date">2025-05-20</span>
     <span class="price">150 USD</span>
+  </div>
+
+  <div class="flight-card">
+    <span class="from">New York (JFK)</span>
+    <span class="to">Los Angeles (LAX)</span>
+    <span class="date">2025-05-21</span>
+    <span class="price">140 USD</span>
+  </div>
+
+  <div class="flight-card">
+    <span class="from">Berlin (BER)</span>
+    <span class="to">Tokyo (HND)</span>
+    <span class="date">2025-06-15</span>
+    <span class="price">350 EUR</span>
+  </div>
+
+  <div class="flight-card">
+    <span class="from">Berlin (BER)</span>
+    <span class="to">Tokyo (HND)</span>
+    <span class="date">2025-06-16</span>
+    <span class="price">340 EUR</span>
+  </div>
+
+  <div class="flight-card">
+    <span class="from">London (LHR)</span>
+    <span class="to">Barcelona (BCN)</span>
+    <span class="date">2025-07-05</span>
+    <span class="price">120 GBP</span>
+  </div>
+
+  <div class="flight-card">
+    <span class="from">London (LHR)</span>
+    <span class="to">Barcelona (BCN)</span>
+    <span class="date">2025-07-06</span>
+    <span class="price">110 GBP</span>
+  </div>
+
+  <div class="flight-card">
+    <span class="from">Singapore (SIN)</span>
+    <span class="to">Sydney (SYD)</span>
+    <span class="date">2025-08-01</span>
+    <span class="price">550 SGD</span>
+  </div>
+
+  <div class="flight-card">
+    <span class="from">Singapore (SIN)</span>
+    <span class="to">Sydney (SYD)</span>
+    <span class="date">2025-08-02</span>
+    <span class="price">530 SGD</span>
+  </div>
+
+  <div class="flight-card">
+    <span class="from">Moscow (VKO)</span>
+    <span class="to">Dubai (DXB)</span>
+    <span class="date">2025-09-10</span>
+    <span class="price">32000 RUB</span>
+  </div>
+
+  <div class="flight-card">
+    <span class="from">Moscow (VKO)</span>
+    <span class="to">Dubai (DXB)</span>
+    <span class="date">2025-09-11</span>
+    <span class="price">31000 RUB</span>
   </div>
 
 </body>
